# motor-controller-highpower-motorshield

./: .travis.yml  LICENSE  README.md
arduino_motor_control/: CMakeLists.txt  package.xml
arduino_motor_control/.svn/: wc.db
arduino_motor_control/firmware/: CMakeLists.txt  arduino_motor_control.cpp
arduino_motor_control/firmware/arduino_libs/LXR_Highpower_Motorshield/: LXR_Highpower_Motorshield.h
arduino_motor_control/firmware/arduino_libs/Motor_Control/: Hardware_Dependent.h  Lxr_Motorshield.cpp  Lxr_Motorshield.h  Lxr_Motorshield_Wrapper.cpp  Motor_Control.cpp  Motor_Control.h  Motor_Interface.h
arduino_motor_control/firmware/ros_lib/update_odom/: ResetPose.h
arduino_motor_control/launch/: arduino_motor_control.launch
arduino_motor_control/msg/: current.msg  set_speed_direction.msg  speed.msg
arduino_motor_control/srv/: heartbeat.srv
motor_control_heartbeat_client/: CMakeLists.txt  package.xml
motor_control_heartbeat_client/.svn/: wc.db
motor_control_heartbeat_client/launch/: motor_control_heartbeat_client.launch
motor_control_heartbeat_client/src/: main.cpp
motor_startup/: CMakeLists.txt  package.xml
motor_startup/.svn/: wc.db
motor_startup/launch/: motor_startup.launch  motor_startup.launch~
