<?xml version="1.0"?>
<package>
  <name>arduino_motor_control</name>
  <version>0.0.1</version>
  <description>This motor-controller-package based on rosserial_arduino brings support for the brushed motor controller based on the LXRobotics Highpower Motorshield to ROS</description>
  <maintainer email="cto@lxrobotics.com">Alexander Entinger</maintainer>
  <license>BSD</license>
  <url type="website">https://github.com/AR2A/motor-controller-highpower-motorshield</url>
  	<build_depend>message_generation</build_depend>
  	<run_depend>message_runtime</run_depend>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rosserial_arduino</build_depend>
  <build_depend>rosserial_client</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rosserial_arduino</run_depend>
  <run_depend>rosserial_client</run_depend>
  <export>
  </export>
</package>
