<?xml version="1.0"?>
<package>
  <name>motor_control_heartbeat_client</name>
  <version>0.0.1</version>
  <description>The motor_control_heartbeat_client package</description>
  <maintainer email="cto@lxrobotics.com">Alexander Entinger</maintainer>
  <license>BSD</license>
  <url type="website">https://github.com/AR2A/motor-controller-highpower-motorshield</url>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>arduino_motor_control</build_depend>
  <run_depend>arduino_motor_control</run_depend>
  <export>
	<rosdoc config="rosdoc.yaml" />
  </export>
</package>
