cmake_minimum_required(VERSION 2.8.3)
project(motor_startup)

find_package(catkin REQUIRED)


################################################
## Declare ROS messages, services and actions ##
################################################


###################################
## catkin specific configuration ##
###################################
catkin_package(
#  INCLUDE_DIRS include
#  LIBRARIES startup
#  CATKIN_DEPENDS other_catkin_pkg
#  DEPENDS system_lib
)


###########
## Build ##
###########


#############
## Install ##
#############


#############
## Testing ##
#############

