<?xml version="1.0"?>
<package>
  <name>motor_startup</name>
  <version>0.0.1</version>
  <description>The startup package</description>
<maintainer email="cto@lxrobotics.com">Alexander Entinger</maintainer>
  <license>BSD</license>
  <url type="website">https://github.com/AR2A/motor-controller-highpower-motorshield</url>
  <buildtool_depend>catkin</buildtool_depend>
  <export></export>
</package>
